--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -60,10 +60,10 @@ form, button{border:0; margin:0; padding:0;}
 }
 
 .field {
-	border-bottom: solid #fff 1px;
+	border-bottom: solid #ccc 1px;
 	border-left:   solid #444 2px;
 	border-top:    solid #444 2px;
-	border-right:  solid #fff 1px;
+	border-right:  solid #ccc 1px;
 }
 
      
