--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -491,9 +491,9 @@ div.chunk4a {
 	margin-top: 1px;
 	width: 348px;
 	height: 48px;
-	-moz-box-shadow: 2px 2px 5px #000;
-	-webkit-box-shadow: 2px 2px 5px #000;
-    box-shadow: 2px 2px 5px #000;
+    -moz-box-shadow: rgba(255, 255, 255, 0.398438) 0px 1px, white 0px 20px 20px -10px inset;
+    -webkit-box-shadow: rgba(255, 255, 255, 0.398438) 0px 1px, white 0px 20px 20px -10px inset;
+    box-shadow: rgba(255, 255, 255, 0.398438) 0px 1px, white 0px 20px 20px -10px inset;
 }
 /* HUD container */
 div.chunk5{
