--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -1927,6 +1927,7 @@ div.foot{
 .wetnote_comment_form_head{
 	width:640;
 	margin-bottom: 20px;
+	margin-top: 20px;
 	border-bottom: 1px solid #ddd;
 }
 
