--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -38,39 +38,12 @@ i {font-family: Lucida Sans Unicode, sans-serif; font-weight: bold; letter-spaci
 a img, :link img, :visited img {border: 0;}
 form, button{border:0; margin:0; padding:0;}
 
-
-.button, .button:hover, .button:visited ,.button:active {
-	display:inline;
-	cursor:pointer;
-	color: #000;
-	background-color: #ddd;
-	padding: 1px 2px 0px 3px ;
-	border-top:    solid #fff 1px;
-	border-right:  solid #888 1px;
-	border-bottom: solid #888 1px;
-	border-left:   solid #fff 1px;
-}  
-.button:active {
-	cursor:pointer;
-	padding: 0px 2px 0px 2px ;
-	border-bottom: solid #fff 1px;
-	border-left:   solid #444 2px;
-	border-top:    solid #444 2px;
-	border-right:  solid #fff 1px;
-}
-
-.field {
-	border-bottom: solid #ccc 1px;
-	border-left:   solid #444 2px;
-	border-top:    solid #444 2px;
-	border-right:  solid #ccc 1px;
-}
-
      
 
 /* thanks http://ryanfait.com/sticky-footer/ */
 html, body {
 	height: 100%;
+	background:transparent;	
 }
 .wrapper {
 	min-height: 100%;
@@ -83,7 +56,7 @@ html, body {
 	clear: both;
 }
 .footer {
-	background-image:url('/art/footer.png')
+	background-image:url('/art/footer.png');
 }
 
 	
@@ -1843,145 +1816,3 @@ div.foot{
 .foot a:active		{color: #ffcc00; text-decoration: none;}
 
 
-
-.wetnote_comment_div , .wetnote_comment_hide_div {
-	position:relative;
-	clear:both;
-}
-
-/* Click here to show hidden */
-.wetnote_comment_hide_div {
-	font-family: Lucida Sans Unicode, sans-serif;
-	color: #999;
-	font-size: 16px;
-}
-.wetnote_comment_hide_div a {
-	color:#999;
-}
-
-.wetnote_comment_div {
-	background-color: #fff;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border-radius: 4px 4px;
-	margin: 10px 0 10px 0;
-	min-height: 100px;
-	width: 600px;
-}
-
-/* Click here to reply */
-.wetnote_comment_form_div{
-	margin-bottom: 40px;
-	clear:both;
-	
-	font-family: Lucida Sans Unicode, sans-serif;
-	color: #999;
-	font-size: 16px;
-}
-.wetnote_comment_form_div a {
-	color:#999;
-}
-
-.wetnote_reply_div{
-	margin-left:40px;
-}
-
-.wetnote_comment_icon {
- 	width:100px;
- 	height:100px;
- 	position: absolute;
-}
-
-.wetnote_comment_text {
-	width:460px;
-	margin-left: 120px;
-	padding-bottom: 20px;
-	overflow: hidden;
-	
-	font-family: Lucida Sans Unicode, sans-serif;
-	color: #000;
-	font-size: 16px;
-}
-
-.wetnote_comment_head {
-	opacity:0;
-	padding-top: 5px;
-	padding-bottom: 10px;
-	width:460px;
-	margin-left:120px;
-	
-	font-family: Lucida Sans Unicode, sans-serif;
-	color: #666;
-	font-size: 12px;
-}
-.wetnote_comment_head a {
-	color:#000;
-}
-
-.wetnote_comment_head:hover {
-	opacity:1;
-}
-
-.wetnote_comment_form{
-	width:640;
-}
-
-.wetnote_comment_form_head{
-	width:640;
-	margin-bottom: 20px;
-	margin-top: 20px;
-	border-bottom: 1px solid #ddd;
-}
-
-.wetnote_comment_form_tail{
-	margin-bottom: 20px;
-}
-
-.wetnote_comment_form_text {
-	border: 1px solid #000;
-	margin-left: 110px;
-	width:500px;
-	height:120px;
-}
-
-.wetnote_comment_post {
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border-radius: 4px 4px;
-	background-color: #DCDCDC;
-	margin-left: 110px;
-	width:502px;
-	height:30px;
-	border-bottom: 1px solid #999;
-	border-right: 1px solid #999;
-	border-top: 1px solid #fff;
-	border-left: 1px solid #fff;
-}
-.wetnote_comment_post:hover {
-	background-color: #E1E1E1;
-}
-.wetnote_comment_post:active {
-	background-color: #DCDCDC;
-}
-
-.wetnote_main{
-	display:table;
-}
-.wetnote_main2{
-	display:table-row;
-}
-.wetnote_comments{
-	display:table-cell;
-	width:640px;
-}
-.wetnote_ticker{
-	width:320px;
-	display:table-cell;
-	font-family: Lucida Sans Unicode, sans-serif;
-	color: #666;
-	font-size: 12px;
-}
-.wetnote_tick{
-	margin:10px 20px 10px 20px;
-	text-align:center;
-}
