--- a/aelua/mods/dumid/css/popup.css
+++ b/aelua/mods/dumid/css/popup.css
@@ -1,4 +1,11 @@
-
+@font-face {
+	font-family: 'CicleGordita';
+	src: url('http://dum-id.appspot.com/cicle_gordita-webfont.eot');
+	src: local('☺'), url('http://dum-id.appspot.com/cicle_gordita-webfont.woff') format('woff'), url('http://dum-id.appspot.com/cicle_gordita-webfont.ttf') format('truetype'), url('http://dum-id.appspot.com/cicle_gordita-webfont.svg#webfontsUHr5emr') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+			
 * {
 	vertical-align: baseline;
 	font-weight: inherit;
@@ -12,74 +19,175 @@
 }
 
 body {
-	font-family: Georgia, serif;
-	font-size:24px;
+	font-family: 'CicleGordita', Tahoma, sans-serif;
+	font-size:33px;
+	color: #454545;
 }
 
 b {
 	font-weight:bold;
 }
 
-.popup {
+.popup, .popupwet {
 	position:relative;
 	width:390px;
 	height:290px;
 	margin: auto;
-	background: #eee;
-	border:5px solid #aaf;
+	background: #FFE846;
+	border:0 solid #aaf;
+}
+
+.popupwet {
+	background-color: #000087;
+	background-image:url('/art/dumid/back.png');
+	background-repeat:no-repeat;
+}
+
+.cont, .contop{
+	width:390px;
+	padding:10px 0 10px 0;
+	margin: 0 auto;
+	clear: both;
+	text-align: center;
+}
+
+.contop{
+	padding: 0;
 }
 
 .head{
-	width:380px;
-	background: #eef;
-	margin: 5px;
-	margin-bottom: 20px
+	text-align: center;
+	padding-top: 10px;
+	color: #fff;
 }
 .from{
-	width:380px;
-	background: #eef;
-	margin: 5px;
-	text-align:left;
+	width:380px;	
+	margin-top: 10px;
+	
+	font-size:33px;
+	color: #fff;
+	text-align:center;
 }
 .wants{
 	width:380px;
-	background: #eef;
-	margin: 5px;
-	text-align:left;
+	
+	font-size:23px;
+	color: #fff;
+	text-align:center;
 }
 .data{
-	width:380px;
-	background: #eef;
-	margin: 5px;
+	width:360px;
+	background: #fff;
+	margin: 0 15px;
+	
+	font-size:33px;
+	color: #454545;
 	text-align:center;
-	font-weight:bold;
 }
 .buttons{
 	font-size:48px;
 	position:absolute;
-	bottom:0px;
+	bottom:60px;
 	width:100%;
 }
 .allow {
+	width: 150px;
+	border-top: 1px solid #CACACA;
+	border-left: 1px solid #CACACA;
+	border-bottom: 1px solid #6D6D6D;
+	border-right: 1px solid #6D6D6D;
+	background: #20AA16;
+	padding: 5px 10px;
+	margin: 0 10px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px 4px;
+	display: inline-block;
+
+	color: #fff;
+	font-size: 28px;
+	font-family: 'CicleGordita', Tahoma, sans-serif;
+	text-decoration: none;
+	vertical-align: middle;
+	text-align: center;
+	
 	float: left;
-	margin:20px;
-	border:5px solid #afa;
-	padding: 5px;
 }
+.allow:hover 		{background: #16C509;}
+.allow:active 		{background: #20AA16;}
+
 .deny {
+	width: 150px;
+	border-top: 1px solid #CACACA;
+	border-left: 1px solid #CACACA;
+	border-bottom: 1px solid #6D6D6D;
+	border-right: 1px solid #6D6D6D;
+	background: #BA290E;
+	padding: 5px 10px;
+	margin: 0 10px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px 4px;
+	display: inline-block;
+
+	color: #fff;
+	font-size: 28px;
+	font-family: 'CicleGordita', Tahoma, sans-serif;
+	text-decoration: none;
+	vertical-align: middle;
+	text-align: center;
+	
 	float: right;
-	margin:20px;
-	border:5px solid #faa;
-	padding: 5px;
 }
+.deny:hover 		{background: #DB2200;}
+.deny:active 		{background: #BA290E;}
+
+.footer{
+	background-color: #454545;
+	height: 35px;
+	width: 390px;
+	position: absolute;
+	bottom: 0px;
+}
+
 .foot {
-	font-size:12px;
+	color: #999999;
+	font-size:16px;
 	position:absolute;
 	bottom:0px;
 	width:100%;
 	text-align:center;
+	margin-bottom:10px;
 }
+.foot a:focus		{color: #ffcc00; text-decoration: none;}
+.foot a:link		{color: #ffcc00; text-decoration: none;}
+.foot a:visited		{color: #ffcc00; text-decoration: none;}
+.foot a:hover		{color: #ffcc00; text-decoration: underline;}
+.foot a:active		{color: #ffcc00; text-decoration: none;}
 
+.button {
+	width: 180px;
+	border-top: 1px solid #CACACA;
+	border-left: 1px solid #CACACA;
+	background: #454545;
+	padding: 5px 10px;
+	margin: 0 auto;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px 4px;
+	display: inline-block;
+
+	color: #fff;
+	font-size: 28px;
+	font-family: 'CicleGordita', Tahoma, sans-serif;
+	text-decoration: none;
+	vertical-align: middle;
+	text-align: center;
+}
+.button:hover 		{background: #6B6B6B;}
+.button:active 		{background: #454545;}
+   
+/*
 .button {
    border-top: 1px solid #96d1f8;
    background: #65a9d7;
@@ -95,7 +203,7 @@ b {
    text-shadow: rgba(0,0,0,.4) 0 1px 0;
    color: #fff;
    font-size: 28px;
-   font-family: Helvetica, Arial, Sans-Serif;
+   font-family: 'CicleGordita', Tahoma, sans-serif;
    text-decoration: none;
    vertical-align: middle;
    }
@@ -110,4 +218,18 @@ b {
    background: -moz-linear-gradient(top, #65a9d7, #3e779d);
    color: #eee;
    }
-   
+   * 
+   * 
+.allow {
+	float: left;
+	margin:20px;
+	border:5px solid #afa;
+	padding: 5px;
+}
+.deny {
+	float: right;
+	margin:20px;
+	border:5px solid #faa;
+	padding: 5px;
+}
+*/   
